--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,2 +1,7 @@
 spring.application.name=coupon-service
 server.port=0
+spring.cloud.consul.discovery.instance-id=${spring.application.name}:${random.value}
+spring.cloud.consul.discovery.tags=javaDevDayMx2019
+spring.cloud.consul.discovery.prefer-ip-address=true
+spring.cloud.consul.host=localhost
+spring.cloud.consul.port=8500
